--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "devDependencies": {
         "axios": "^1.7.4",
         "laravel-vite-plugin": "^1.0",
+        "tailwindcss": "^3.4.13",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "geist": "^1.3.1",
+        "npm": "^10.9.0"
     }
 }
